--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,5 @@
 attrs==20.3.0
-build==0.3.1.post1
+build==0.7.0
 certifi==2020.12.5
 chardet==4.0.0
 coverage==5.5
@@ -15,4 +15,5 @@ pytest==6.2.3
 pytest-cov==2.11.1
 requests==2.25.1
 toml==0.10.2
+tomli==2.0.1
 urllib3==1.26.4
